force-app/main/default/objects/Outlet__c/fields/Closing_TIme__c.field-meta.xml
<CustomField>
    <fullName>Closing_TIme__c</fullName>
    <label>Closing TIme</label>
    <type>Time</type>
</CustomField>