force-app/main/default/objects/Outlet__c/fields/No_Foot_fall__c.field-meta.xml
<CustomField>
    <fullName>No_Foot_fall__c</fullName>
    <label>No Foot fall</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>