force-app/main/default/objects/Outlet__c/fields/Outlet_Manager__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Outlets</relationshipLabel>
    <relationshipName>Outlets</relationshipName>
    <type>Lookup</type>
</CustomField>