force-app/main/default/objects/Outlet__c/fields/Outlet_Name__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Name__c</fullName>
    <label>Outlet Name</label>
    <referenceTo>Head_Office__c</referenceTo>
    <relationshipLabel>Outlets</relationshipLabel>
    <relationshipName>Outlets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>