force-app/main/default/objects/Outlet__c/fields/Square_feet__c.field-meta.xml
<CustomField>
    <fullName>Square_feet__c</fullName>
    <label>Square feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>